--- a/pandas2.ipynb
+++ b/pandas2.ipynb
@@ -4048,6 +4048,354 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#효율적인 연산을 위한 pandas.eval()\n",
+    "\n",
+    "import pandas as pd\n",
+    "nrows, ncols = 100000, 100\n",
+    "rng = np.random.RandomState(42)\n",
+    "df1, df2, df3, df4 = (pd.DataFrame(rng.rand(nrows, ncols))\n",
+    "                      for i in range(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59.7 ms ± 659 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기존의 pandas 접근 방식\n",
+    "#dataframe의 합을 계산하기 위해 ㅎㅂ 작성\n",
+    "%timeit df1 + df2 + df3 + df4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61 ms ± 715 μs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#pd.eval: 표현식을 문자열로 구성해도 같은 결과\n",
+    "%timeit pd.eval('df1 + df2 + df3 + df4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#산술연산자 지원\n",
+    "df1, df2, df3, df4, df5 = (pd.DataFrame(rng.randint(0, 1000, (100, 3)))\n",
+    "                           for i in range(5))\n",
+    "result1 = -df1 * df2 / (df3 + df4) - df5\n",
+    "result2 = pd.eval('-df1 * df2 / (df3 + df4) - df5')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#비교 연산자\n",
+    "result1 = (df1 < df2) & (df2 <= df3) & (df3 != df4)\n",
+    "result2 = pd.eval('df1 < df2 <= df3 != df4')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#비트 단위 연산자\n",
+    "result1 = (df1 < 0.5) & (df2 < 0.5) | (df3 < df4)\n",
+    "result2 = pd.eval('(df1 < 0.5) & (df2 < 0.5) | (df3 < df4)')\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#객체 속성과 인덱스\n",
+    "result3 = pd.eval('(df1 < 0.5) and (df2 < 0.5) or (df3 < df4)')\n",
+    "np.allclose(result1, result3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.061761</td>\n",
+       "      <td>0.925463</td>\n",
+       "      <td>0.997420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.209863</td>\n",
+       "      <td>0.280456</td>\n",
+       "      <td>0.042148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.738991</td>\n",
+       "      <td>0.019046</td>\n",
+       "      <td>0.715501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.062857</td>\n",
+       "      <td>0.516241</td>\n",
+       "      <td>0.604588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.204537</td>\n",
+       "      <td>0.813392</td>\n",
+       "      <td>0.244804</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C\n",
+       "0  0.061761  0.925463  0.997420\n",
+       "1  0.209863  0.280456  0.042148\n",
+       "2  0.738991  0.019046  0.715501\n",
+       "3  0.062857  0.516241  0.604588\n",
+       "4  0.204537  0.813392  0.244804"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#열 단위 연산을 위한 Dataframe.eval()\n",
+    "#열의 이름을 부를 수 있다는 이점이 존재\n",
+    "\n",
+    "df = pd.DataFrame(rng.rand(1000, 3), columns=['A', 'B', 'C'])\n",
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result1 = (df['A'] + df['B']) / (df['C'] - 1)\n",
+    "result2 = pd.eval(\"(df.A + df.B) / (df.C - 1)\")\n",
+    "np.allclose(result1, result2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.061761</td>\n",
+       "      <td>0.925463</td>\n",
+       "      <td>0.997420</td>\n",
+       "      <td>0.989777</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.209863</td>\n",
+       "      <td>0.280456</td>\n",
+       "      <td>0.042148</td>\n",
+       "      <td>11.633339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.738991</td>\n",
+       "      <td>0.019046</td>\n",
+       "      <td>0.715501</td>\n",
+       "      <td>1.059450</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.062857</td>\n",
+       "      <td>0.516241</td>\n",
+       "      <td>0.604588</td>\n",
+       "      <td>0.957840</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.204537</td>\n",
+       "      <td>0.813392</td>\n",
+       "      <td>0.244804</td>\n",
+       "      <td>4.158143</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          A         B         C          D\n",
+       "0  0.061761  0.925463  0.997420   0.989777\n",
+       "1  0.209863  0.280456  0.042148  11.633339\n",
+       "2  0.738991  0.019046  0.715501   1.059450\n",
+       "3  0.062857  0.516241  0.604588   0.957840\n",
+       "4  0.204537  0.813392  0.244804   4.158143"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Dataframe.eval()을 사용해서 열을 할당\n",
+    "df.head()\n",
+    "df.eval('D = (A + B) / C', inplace=True)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
